--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="bgcard"></div>
                 <ion-icon name="musical-notes" class="html"></ion-icon>
                 <h3>Memutar Music</h3>
-                <p>Kamu bisa memnutar musik kesukaanmu dengan<br>ZLDAMSC.</p>
+                <p>Kamu bisa memutar musik kesukaanmu dengan<br>ZLDAMSC.</p>
             </div>
             <div class="card">
                 <div class="bgcard"></div>
