--- a/index.html
+++ b/index.html
@@ -60,27 +60,59 @@
 
     <!-- Servive -->
     <section id="services">
-        <h1 class="title">Services</h1>
-        <div class="cards">
-            <div class="card">
-                <div class="bgcard"></div>
-                <ion-icon name="musical-notes" class="html"></ion-icon>
-                <h3>Memutar Music</h3>
-                <p>Kamu bisa memutar musik kesukaanmu dengan<br>ZLDAMSC.</p>
-            </div>
-            <div class="card">
-                <div class="bgcard"></div>
-                <ion-icon name="logo-youtube" class="css"></ion-icon>
-                <h3>Memutar Video</h3>
-                <p>Ayok streaming video favorit kamu dengan<br>ZLDAMSC.</p>
-            </div>
-            <div class="card">
-                <div class="bgcard"></div>
-                <ion-icon name="download" class="js"></ion-icon>
-                <h3>Download</h3>
-                <p>Kamu juga bisa mendownload langsung lagu atau video yang kamu mau dengan<br>ZLDAMSC.</p>
+        <div class="services2">
+            <h1 class="title">Services</h1>
+            <div class="cards">
+                <div class="card">
+                    <div class="bgcard"></div>
+                    <ion-icon name="musical-notes" class="html"></ion-icon>
+                    <h3>Memutar Music</h3>
+                    <p>Kamu bisa memnutar musik kesukaanmu dengan<br>ZLDAMSC.</p>
+                </div>
+                <div class="card">
+                    <div class="bgcard"></div>
+                    <ion-icon name="logo-youtube" class="css"></ion-icon>
+                    <h3>Memutar Video</h3>
+                    <p>Ayok streaming video favorit kamu dengan<br>ZLDAMSC.</p>
+                </div>
+                <div class="card">
+                    <div class="bgcard"></div>
+                    <ion-icon name="download" class="js"></ion-icon>
+                    <h3>Download</h3>
+                    <p>Kamu juga bisa mendownload langsung lagu atau video yang kamu mau dengan<br>ZLDAMSC.</p>
+                </div>
             </div>
         </div>
+        <div class="services1">
+            <div class="service-container padding-lr">
+                <div class="service-des">
+                    <h1 class="titles">Memutar Music</h1>
+                    <p>Kamu bisa memnutar musik kesukaanmu dengan<br>ZLDAMSC.</p>
+                </div>
+                <div class="service-pic">
+                    <img src="img/music2.svg">
+                </div>
+            </div>
+            <div class="service-container2 padding-lr">
+                <div class="service-pic">
+                    <img src="img/video.svg">
+                </div>
+                <div class="service-des">
+                    <h1 class="titles">Streaming Video</h1>
+                    <p>Ayok streaming video favorit kamu dengan<br>ZLDAMSC.</p>
+                </div>
+            </div>
+            <div class="service-container padding-lr">
+                <div class="service-des">
+                    <h1 class="titles">Download File</h1>
+                    <p>Kamu juga bisa mendownload langsung lagu atau video yang kamu mau dengan<br>ZLDAMSC.</p>
+                </div>
+                <div class="service-pic">
+                    <img src="img/download.svg">
+                </div>
+            </div>
+        </div>
+        
     </section>
 
     <!-- Profile -->
