--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
 
     <!-- Home -->
-    <section id="home">
+    <section id="home padding-lr">
         <div class="home-left margin100">
             <img src="img/music.svg">
         </div>
