--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </header>
 
     <!-- Home -->
-    <section id="home padding-lr">
+    <section id="home">
         <div class="home-left margin100">
             <img src="img/music.svg">
         </div>
-        <div class="home-right">
+        <div class="home-right padding-lr">
             <span>Hey! Saya</span>
             <h3>ZLDAMSC</h3>
             <span class="des">Bot Telegram yang bisa memutar musik dan video langsung di obrolan suara group dan
